一番シンプルなサンプルとしてechoサンプルを作成。
git-svn-id: https://www.seasar.org/svn/sandbox/s2dwr/trunk@17 71c7ba27-f65e-4535-8570-938fef6cceb7

--- a/s2dwr-example/.settings/org.eclipse.core.resources.prefs
+++ b/s2dwr-example/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Wed Jan 02 01:50:28 JST 2008
+#Wed Jan 02 15:44:04 JST 2008
 eclipse.preferences.version=1
+encoding//src/main/webapp/echo.html=UTF-8
 encoding/<project>=UTF-8
